<resources>
<string name="app_name" translatable="false">ASTI</string>
<string name="title_activity_maps">Map</string>
<string name="mainViewName">Statistics</string>
<string name="buttonMap">Map</string>
<string name="buttonStatistics">Statistics</string>
<string name="locationLovensdijkstraat" translatable="false">Lovensdijkstraat</string>
<string name="locationHogesschoollaan" translatable="false">Hogeschoolstraat</string>
<string name="TableNameLocation">Location</string>
<string name="TableNameTime">Time Spend</string>
<string name="YearTitle">year</string>
<string name="hoursTotalTitle">hours</string>
<string name="WeekNumberTitle">week</string>
<string name="RouteBar" translatable="false">Route bar</string>
<string name="ToInfoPage">Information</string>
<string name="informationPageText">This application will help you keep track on time spend on school. In statistics you can find a overview of you time spend on school per week.   Did you spend enough time at school this week? Congrats! You can follow a route on the map to a bar for a well deserved drink.   For changes, like a bar change, thema change or minimum time change, you have to visit Settings.</string>

</resources>
